--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,8 +10,8 @@ spring:
       properties:
         hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
   datasource:
-    url: jdbc:postgresql://172.17.0.2:5432/board-db
-   # url: jdbc:postgresql://localhost:5432/board-db
+   # url: jdbc:postgresql://172.17.0.2:5432/board-db
+    url: jdbc:postgresql://localhost:5432/board_db
     username: board-master
     password: 1234
   logging:
