예외 처리 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
   loging:
     level:
       # TRACE < DEBUF < INDO < WARN < ERROR
-      root: ERROR
+      root: INFO
 
       #  logging:
       #    level:
